nimbus-cloud-client-017
-----------------------

[*] Fixed a bug when running common images from cumulus.
    https://bugzilla.mcs.anl.gov/globus/show_bug.cgi?id=7087

[*] Fixed need to have a grid proxy when running --save and key is
    unencrypted.
    https://bugzilla.mcs.anl.gov/globus/show_bug.cgi?id=7090


nimbus-cloud-client-016
-----------------------

[*] Introduces Cumulus/S3 support using the Jets3t library.
    See http://www.nimbusproject.org/docs/2.5/changelog.html#2.5

[*] When using Cumulus support, the credentials for this are in the
    cloud.properties file directly, so it needs to be protected.

[*] Introduced default.properties which is a copy of distributed
    cloud.properties.

[*] Removed Teraport-specific cloud.properties, the distributed
    cloud.properties does not work with any cloud out of the box.

[*] Added support for core count to cloud.properties, administrator would
    usually recommend the number to use.
    http://bugzilla.mcs.anl.gov/globus/show_bug.cgi?id=7062

[*] When using the cloud client, you may now export NIMBUS_X509_TRUSTED_CERTS 
    to override using the lib/certs directory. This is intentionally different
    than X509_CERT_DIR in order to allow coexistence with 'grid' software
    environments.

[*] Added support for using unencrypted keys directly instead of needing to
    run proxy-init.  The properties 'nimbus.cert' and 'nimbus.key' are consulted
    first if they exist, then a normal grid proxy search is made, then ~/.nimbus
    is consulted for an unencrypted usercert.pem and userkey.pem (which will be
    the most typical/recommended situation), then ~/.globus.  
    See the README for details.


nimbus-cloud-client-015
-----------------------

[*] New flag "--print-cxt-status" (see "--extrahelp") to find out the contextualization
    status of each node in the cluster.
    http://bugzilla.mcs.anl.gov/globus/show_bug.cgi?id=7055

[*] Scripts use /bin/bash exclusively now.